fixed text align issues and panel arrangement

--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:300,400,600');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700');
 
 body {
   font-family: "Catamaran";
@@ -102,6 +103,7 @@ nav {
 }
 
 .panel-label {
+  font-family: 'Roboto Slab', serif;
   font-size: 2.4rem;
   color: #FFFFFF;
   z-index: 2;
@@ -153,13 +155,18 @@ nav {
 }
 
 .info-table {
-  padding: 1rem;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
-.info-table td {
+.info-table div {
+  text-align: left;
+  position: relative;
+  display: inline-block;
+  width: 30rem;
+  height: auto;
   vertical-align: top;
-  padding: 1.6rem;
+  padding: 1rem
 }
 
 .banner-label {
@@ -178,7 +185,7 @@ nav {
   position: relative;
   line-height: 22rem;
   text-align: center;
-  background-color: rgba(255,80,80,.25);
+  background-color: rgba(255,80,80,.28);
   height: 100%;
   width: 100%;
   margin: 0 0
